--- a/notebooks/data_filtered_xgboost.ipynb
+++ b/notebooks/data_filtered_xgboost.ipynb
@@ -2,21 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "0f88bb45",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ghcp/miniconda3/envs/haza_wokr_env/lib/python3.8/site-packages/zfit/__init__.py:63: UserWarning: TensorFlow warnings are by default suppressed by zfit. In order to show them, set the environment variable ZFIT_DISABLE_TF_WARNINGS=0. In order to suppress the TensorFlow warnings AND this warning, set ZFIT_DISABLE_TF_WARNINGS=1.\n",
-      "  warnings.warn(\n",
-      "/home/ghcp/miniconda3/envs/haza_wokr_env/lib/python3.8/site-packages/zfit/core/basemodel.py:199: UserWarning: For the future, also decorate _pdf with @supports and specify what you support (such as 'norm=True' to keep the same behavior as before)\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.insert(0,'/home/ghcp/Documentos/CINVESTAV/SEMESTRE_1/scripts')\n",
@@ -51,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "1ece38ef",
    "metadata": {},
    "outputs": [],
@@ -111,7 +100,10 @@
     "        branch_dict = {col: df_result[col].values for col in df_result.columns}\n",
     "\n",
     "        # Guardar en archivo ROOT con uproot3\n",
-    "        with uproot.recreate(\"/home/ghcp/Documentos/CINVESTAV/ANALISYS_B0tomumuKstar/CODES/\" + output_path) as f:\n",
+    "        # with uproot.recreate(\"/home/ghcp/Documentos/CINVESTAV/ANALISYS_B0tomumuKstar/CODES/\" + output_path) as f:\n",
+    "        with uproot.recreate(\"/home/ghcp/Documentos/CINVESTAV/ANALISYS_B0tomumuKstar/angular/codes/\" + output_path) as f:\n",
+    "\n",
+    "            \n",
     "            f[\"treeBd\"] = uproot.newtree({col: \"float32\" for col in df_result.columns})\n",
     "            f[\"treeBd\"].extend(branch_dict)\n",
     "\n",
@@ -184,7 +176,7 @@
     "        print(f\"Eventos finales en {filepath}: {len(df_result)}\")\n",
     "                # Guardar en archivo ROOT con uproot3\n",
     "        output_path =\"data_for_fit_reso_\" + chanel\n",
-    "        with uproot.recreate(\"/home/ghcp/Documentos/CINVESTAV/ANALISYS_B0tomumuKstar/CODES/\" + output_path+\".root\") as f:\n",
+    "        with uproot.recreate(\"/home/ghcp/Documentos/CINVESTAV/ANALISYS_B0tomumuKstar/angular/codes/\" + output_path+\".root\") as f:\n",
     "            f[tree_name] = uproot.newtree({col: \"float32\" for col in df_result.columns})\n",
     "            f[tree_name].extend(branch_dict)\n",
     "\n",
@@ -199,47 +191,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "7a8ba0b2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Eventos finales: /home/ghcp/Documentos/CINVESTAV/ANALISYS_B0tomumuKstar/angular/codes/AntiRadVeto_Data_2022_Era1_v1.root 23107\n",
-      "✅ Archivo ROOT guardado con uproot3 en: AntiRadVeto_Data_2022_Era1_v1_XGBoost_fom_cut.root\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# path_data_v0     = \"/home/ghcp/Documentos/CINVESTAV/ANALISYS_B0tomumuKstar/CODES/AntiRadVeto_Data_2022_Era1_v0.root\"\n",
-    "# path_MC_Jpsi_v0  = \"/home/ghcp/Documentos/CINVESTAV/ANALISYS_B0tomumuKstar/CODES/AntiRadVeto_MC_Jpsi_2022_Era1_v0.root\"\n",
-    "# path_MC_psi2s_v0 = \"/home/ghcp/Documentos/CINVESTAV/ANALISYS_B0tomumuKstar/CODES/AntiRadVeto_MC_Psi2s_2022_Era1_v0.root\"\n",
-    "# path_MC_nores_v0 = \"/home/ghcp/Documentos/CINVESTAV/ANALISYS_B0tomumuKstar/CODES/AntiRadVeto_MC_NoRes_2022_Era1_v0.root\"\n",
+    "path_data_v0     = \"/home/ghcp/Documentos/CINVESTAV/ANALISYS_B0tomumuKstar/angular/codes/AntiRadVeto_Data_2022_Era1_v0.root\"\n",
+    "#path_MC_Jpsi_v0  = \"/home/ghcp/Documentos/CINVESTAV/ANALISYS_B0tomumuKstar/angular/codes/AntiRadVeto_MC_Jpsi_2022_Era1_v0.root\"\n",
+    "#path_MC_psi2s_v0 = \"/home/ghcp/Documentos/CINVESTAV/ANALISYS_B0tomumuKstar/angular/codes/AntiRadVeto_MC_Psi2s_2022_Era1_v0.root\"\n",
+    "# path_MC_nores_v0 = \"/home/ghcp/Documentos/CINVESTAV/ANALISYS_B0tomumuKstar/angular/codes/AntiRadVeto_MC_NoRes_2022_Era1_v0.root\"\n",
     "\n",
     "# output_path_data_v0  = \"AntiRadVeto_Data_2022_Era1_v0_XGBoost_fom_cut.root\"\n",
-    "# output_path_Jpsi_v0  = \"AntiRadVeto_MC_Jpsi_2022_Era1_v0_XGBoost_fom_cut.root\"\n",
-    "# output_path_Psi2s_v0 = \"AntiRadVeto_MC_Psi2s_2022_Era1_v0_XGBoost_fom_cut.root\"\n",
+    "#output_path_Jpsi_v0  = \"AntiRadVeto_MC_Jpsi_2022_Era1_v0_XGBoost_fom_cut.root\"\n",
+    "#output_path_Psi2s_v0 = \"AntiRadVeto_MC_Psi2s_2022_Era1_v0_XGBoost_fom_cut.root\"\n",
     "# output_path_NoRes_v0 = \"AntiRadVeto_MC_NoRes_2022_Era1_v0_XGBoost_fom_cut.root\"\n",
     "\n",
     "# df_data_o     = process_xgboost_cut(filepath = path_data_v0,     output_path=output_path_data_v0) \n",
-    "# df_MC_Jpsi_o  = process_xgboost_cut(filepath = path_MC_Jpsi_v0,  output_path=output_path_Jpsi_v0)\n",
-    "# df_MC_psi2s_o = process_xgboost_cut(filepath = path_MC_psi2s_v0, output_path=output_path_Psi2s_v0)\n",
+    "#df_MC_Jpsi_o  = process_xgboost_cut(filepath = path_MC_Jpsi_v0,  output_path=output_path_Jpsi_v0)\n",
+    "#df_MC_psi2s_o = process_xgboost_cut(filepath = path_MC_psi2s_v0, output_path=output_path_Psi2s_v0)\n",
     "# df_MC_nores_o = process_xgboost_cut(filepath = path_MC_nores_v0, output_path=output_path_NoRes_v0)\n",
     "\n",
     "\n",
-    "path_data_v1     = \"/home/ghcp/Documentos/CINVESTAV/ANALISYS_B0tomumuKstar/angular/codes/AntiRadVeto_Data_2022_Era1_v1.root\"\n",
+    "#path_data_v1     = \"/home/ghcp/Documentos/CINVESTAV/ANALISYS_B0tomumuKstar/angular/codes/AntiRadVeto_Data_2022_Era1_v1.root\"\n",
     "# path_MC_Jpsi_v1  = \"/home/ghcp/Documentos/CINVESTAV/ANALISYS_B0tomumuKstar/CODES/AntiRadVeto_MC_Jpsi_2022_Era1_v1.root\"\n",
     "# path_MC_psi2s_v1 = \"/home/ghcp/Documentos/CINVESTAV/ANALISYS_B0tomumuKstar/CODES/AntiRadVeto_MC_Psi2s_2022_Era1_v1.root\"\n",
     "# path_MC_nores_v1 = \"/home/ghcp/Documentos/CINVESTAV/ANALISYS_B0tomumuKstar/CODES/AntiRadVeto_MC_NoRes_2022_Era1_v1.root\"\n",
     "\n",
-    "output_path_data_v1  = \"AntiRadVeto_Data_2022_Era1_v1_XGBoost_fom_cut.root\"\n",
+    "#output_path_data_v1  = \"AntiRadVeto_Data_2022_Era1_v1_XGBoost_fom_cut.root\"\n",
     "# output_path_Jpsi_v1  = \"AntiRadVeto_MC_Jpsi_2022_Era1_v1_XGBoost_fom_cut.root\"\n",
     "# output_path_Psi2s_v1 = \"AntiRadVeto_MC_Psi2s_2022_Era1_v1_XGBoost_fom_cut.root\"\n",
     "# output_path_NoRes_v1 = \"AntiRadVeto_MC_NoRes_2022_Era1_v1_XGBoost_fom_cut.root\"\n",
     "\n",
-    "df_data_o_v1  = process_xgboost_cut(filepath = path_data_v1,  output_path=output_path_data_v1)\n",
+    "#df_data_o_v1  = process_xgboost_cut(filepath = path_data_v1,  output_path=output_path_data_v1)\n",
     "# df_MC_Jpsi_o_v1  = process_xgboost_cut(filepath = path_MC_Jpsi_v1,  output_path=output_path_Jpsi_v1)\n",
     "# df_MC_psi2s_o_v1 = process_xgboost_cut(filepath = path_MC_psi2s_v1, output_path=output_path_Psi2s_v1)\n",
     "# df_MC_nores_o_v1 = process_xgboost_cut(filepath = path_MC_nores_v1, output_path=output_path_NoRes_v1)\n",
@@ -258,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "fdcbd477",
    "metadata": {},
    "outputs": [
@@ -266,9 +249,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Eventos finales en /home/ghcp/Documentos/CINVESTAV/ANALISYS_B0tomumuKstar/CODES/AntiRadVeto_Data_2022_Era1_v0.root: 2271020\n",
+      "Eventos finales en /home/ghcp/Documentos/CINVESTAV/ANALISYS_B0tomumuKstar/angular/codes/AntiRadVeto_Data_2022_Era1_v0.root: 25567\n",
       "✅ Archivo ROOT guardado con uproot3 en: data_for_fit_reso_jpsi\n",
-      "Eventos finales en /home/ghcp/Documentos/CINVESTAV/ANALISYS_B0tomumuKstar/CODES/AntiRadVeto_Data_2022_Era1_v0.root: 233910\n",
+      "Eventos finales en /home/ghcp/Documentos/CINVESTAV/ANALISYS_B0tomumuKstar/angular/codes/AntiRadVeto_Data_2022_Era1_v0.root: 2579\n",
       "✅ Archivo ROOT guardado con uproot3 en: data_for_fit_reso_psi2s\n"
      ]
     }
@@ -276,6 +259,16 @@
    "source": [
     "df_data_Jpsi =process_xgboost_window_resonant(filepath = path_data_v0 , chunk_size=9_000_000, chanel=\"jpsi\")\n",
     "df_data_psi2s =process_xgboost_window_resonant(filepath =path_data_v0, chunk_size=9_000_000, chanel=\"psi2s\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f22db342",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
    ]
   }
  ],
